# medical-shortcut-mitigation

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  test.py  train.py
configs/: default.yaml
configs/chexpert/: adv_classifier.yaml  adv_classifier_reb.yaml  baseline.yaml  dcor.yaml  dcor_reb.yaml  mine.yaml  mine_reb.yaml  mmd.yaml  mmd_reb.yaml  rebalancing.yaml
configs/chexpert/prevalence_to_buckets/: 70.json  75.json  80.json  85.json  90.json  93.json  98.json
configs/kermani-oct/: adv_classifier.yaml  adv_classifier_reb.yaml  baseline.yaml  dcor.yaml  dcor_reb.yaml  mine.yaml  mine_reb.yaml  mmd.yaml  mmd_reb.yaml  rebalancing.yaml
configs/kermani-oct/prevalence_to_buckets/: 70.json  75.json  80.json  85.json  90.json  93.json  98.json
configs/morpho-mnist/: adv_classifier.yaml  adv_classifier_reb.yaml  baseline.yaml  dcor.yaml  dcor_reb.yaml  mine.yaml  mine_reb.yaml  mmd.yaml  mmd_reb.yaml  rebalancing.yaml
scripts/: download_pretrained_models.py
scripts/local/: prevalence_ablation.sh  test_kfold.sh  train_kfold.sh
scripts/slurm/: prevalence_ablation.sh  test_kfold.sh  train_kfold.sh
src/shortcut/: config.py  criterion.py  optimizers.py  training.py  utils.py
src/shortcut/evaluation/: aggregate_epochs.py  aggregate_metrics.py  measure_compute_time.py  subspace_analysis.py
src/shortcut/metrics/: __init__.py  abstract.py  continuous.py  discrete.py
src/shortcut/models/: __init__.py  classification_heads.py  dependence_measures.py  encoder.py  subspace_disentanglement.py
src/shortcut/visualization/: plot_data_overview.py  (+3 more)
